<resources>
    <string name="app_name">Учёт</string>
    <string name="dots">⋮</string>
    <string name="label_fragment_insert">Удалённый Учёт</string>
    <string name="label_fragment_edit_sale">Продажи.Редактирование</string>
    <string name="label_fragment_report">Продажи.Отчёт</string>
    <string name="fragment_receipt_report">Отчёт по приёмке</string>
    <string name="label_fragment_date_range">Выгрузка за период</string>
    <string name="export_csv_period">Выгрузка за период с %1$s по %2$s.csv</string>
    <string name="import_report"><b>Выгрузка</b></string>
    <string name="csv_title_date">Выгрузка от %1$s.csv</string>
    <string name="products">Товары</string>
    <string name="label_fragment_products">Товары.Справочник</string>
    <string name="label_fragment_edit_handbook">Товары.Редактирование</string>
    <string name="product_asterisk">Товар *</string>
    <string name="good">Товар</string>
    <string name="product_colon">"Товар: "</string>
    <string name="names">Операционисты</string>
    <string name="label_fragment_names">Операционисты.Справочник</string>
    <string name="name_edit_dynamic_title">Операционисты.Редактирование</string>
    <string name="payment_types">Типы оплаты</string>
    <string name="label_fragment_payment_types">Типы оплаты.Справочник</string>
    <string name="payment_types_edit_dynamic_title">Типы оплаты.Редактирование</string>
    <string name="sale_types">Типы продажи</string>
    <string name="label_fragment_sale_types">Типы продажи.Справочник</string>
    <string name="sale_types_edit_dynamic_title">Типы продажи.Редактирование</string>
    <string name="label_fragment_backup">Backup</string>
    <string name="label_fragment_restore">Restore</string>
    <string name="label_fragment_receipt_name">Приёмка.Имя оператора</string>
    <string name="label_fragment_receipt">Приёмка</string>
    <string name="rationale_message">\nДля правильного функционирования данной программе требуется доступ к хранилищу данных</string>
    <string name="rationale_title">Предоставьте запрашиваемые разрешения</string>
    <string name="ok_btn">Ок</string>
    <string name="decline_btn">Отклонить</string>
    <string name="activity_warning">Activity cannot be null</string>
    <string name="total_text">Итого за день, руб. :</string>
    <string name="total_text_double">Итого за день, руб. : %1$s</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="fragment_settings">Настройки</string>
    <string name="restore_description">To restore a DB, restore all the following tables. \nThe tables backup is stored in the Documents.RemoteAccountingBackup \n\nBe careful to choose the right table and restore each table ONLY once: \nThere is a table name check, but NO duplication check! \n\nIf you restore the same table multiple times all the data in the DB table will be duplicated.</string>
    <string name="_0">0</string>
    <string name="menu">Меню</string>
    <string name="report"><b>Продажи</b></string>
    <string name="_30">За последние 30 дней</string>
    <string name="range">Выберите диапазон</string>
    <string name="handbooks">Справочники</string>
    <string name="Date">Дата:</string>
    <string name="today_date">Дата: %1$s</string>
    <string name="name">ФИО</string>
    <string name="name_asterisk">ФИО *</string>
    <string name="name_semicolon">ФИО:</string>
    <string name="name_title_with_name">ФИО: %1$s</string>
    <string name="number_title_full">Количество</string>
    <string name="number">Количество, шт. *</string>
    <string name="number_asterisk">Количество *</string>
    <string name="number_title">Кол-во</string>
    <string name="number_value">Кол-во, \nшт.</string>
    <string name="plus">+</string>
    <string name="price">Цена</string>
    <string name="price_strict">Цена, руб. *</string>
    <string name="price_rub">Цена, \nруб.</string>
    <string name="price_asterisk">Цена *</string>
    <string name="further">Далее</string>
    <string name="remains_word">"Остаток "</string>
    <string name="remains">Остаток на складе, шт.:</string>
    <string name="remains_simple">Остаток, \nшт.</string>
    <string name="payment_type_asterisk">Тип оплаты *</string>
    <string name="payment_types_simple">Тип оплаты</string>
    <string name="sale_type_asterisk">Тип продажи *</string>
    <string name="sale_type_simple">Тип продажи</string>
    <string name="comment">Примечание</string>
    <string name="total">Сумма, руб.:</string>
    <string name="total_values">Сумма, руб.: %1$s</string>
    <string name="receipt_title">Принято:</string>
    <string name="receive_goods">Принять товар</string>
    <string name="receipt_report">Посмотреть приёмку</string>
    <string name="next_day">Следующий день</string>
    <string name="previous_day">Предыдущий день</string>
    <string name="attention">ВНИМАНИЕ!</string>
    <string name="receipt_message">Будьте внимательны при получении товаров и оформлении приёмки! \n\nПосле внесения товара в приёмку его нельзя удалить или отреактировать \n\nЕсли вы ошиблись в количестве получаемого товара, оформите повторную приёмку с таким же названием товара, но с отрицательным количеством</string>
    <string name="permissions_granted">Разрешения предоставлены</string>
    <string name="csv_header">Дата,Товар,Цена,Количество,Сумма,Тип оплаты,Тип продажи,ФИО,Примечание\n</string>
    <string name="send_csv">Переслать CSV</string>
    <string name="sales_csv_backup_title">%1$s Sales.csv</string>
    <string name="products_csv_backup_title">%1$s Products.csv</string>
    <string name="payment_types_csv_backup_title">%1$s Payment Types.csv</string>
    <string name="sale_types_csv_backup_title">%1$s Sale Types.csv</string>
    <string name="names_csv_backup_title">%1$s Names.csv</string>
    <string name="receipt_csv_backup_title">%1$s ReceiptOfGoods.csv</string>
    <string name="delete_message">Вы уверены, что хотите удалить эту запись?\n\nУдаленную запись невозможно восстановить!\n\nВы удаляете её навсегда!</string>
    <string name="no_item">Нет такой позиции в базе данных</string>
    <string name="cancel_btn">Отмена</string>
    <string name="item_deleted_message">Запись удалена</string>
    <string name="remains_where">"на складе, шт.: "</string>
    <string name="remains_where_zero">"на складе, шт.: 0"</string>
    <string name="attention_negative_number">Внимание! Количество товара на складе меньше нуля! Измените количество!</string>
    <string name="can_not_be_empty">Это поле не может быть пустым</string>
    <string name="db_backup_created">DB backup created</string>
    <string name="start_date">"Дата начала: "</string>
    <string name="start_date_values">Дата начала: %1$s</string>
    <string name="end_date">"Дата окончания: "</string>
    <string name="end_date_values">Дата окончания: %1$s</string>
    <string name="external_storage_not_mounted">External storage not mounted</string>
    <string name="product_not_found">Ошибка! Данный товар не найден в справочнике Товаров! Редактирование запрещено!</string>
    <string name="not_enough_products">Внимание! Вы продаете товара больше, чем есть на складе!</string>
    <string name="error_can_t_import_table">Error! Can\'t import table</string>
    <string name="error_wrong_mime_type_choose_another_file">Error! Wrong MIME type! Choose another file!</string>
    <string name="error_wrong_table_choose_a_sales_table">Error! Wrong table! Choose a Sales table</string>
    <string name="sales_table_imported">Sales Table imported</string>
    <string name="error_wrong_table_choose_a_products_table">Error! Wrong table! Choose a Products table</string>
    <string name="products_table_imported">Products Table imported</string>
    <string name="error_wrong_table_choose_a_payment_types_table">Error! Wrong table! Choose a Payment Types table</string>
    <string name="payment_types_table_imported">Payment Types Table imported</string>
    <string name="error_wrong_table_choose_a_sale_types_table">Error! Wrong table! Choose a Sale Types table</string>
    <string name="sale_types_table_imported">Sale Types Table imported</string>
    <string name="error_wrong_table_choose_a_names_table">Error! Wrong table! Choose a Names table</string>
    <string name="names_table_imported">Names Table imported</string>
    <string name="error_wrong_table_choose_an_receipt_table">Error! Wrong table! Choose a ReceiptOfGoods table</string>
    <string name="receipt_table_imported">ReceiptOfGoods Table imported</string>
    <string name="attention_max_number">Внимание! Максимально допустимое количество товара!</string>
    <string name="name_receipt">Принял, \nФИО</string>
    <string name="product_number_can_t_be_zero">Количество принимаемого товара не может быть равно 0!</string>
    <string name="create_a_manual_backup">Create a manual backup up to the current date. \nThe backup will be saved in Documents.RemoteAccountingBackup</string>
    <string name="table_name">Table name</string>
    <string name="backup_status">Backup status</string>
    <string name="_1_sales">1. Sales</string>
    <string name="_2_products">2. Products</string>
    <string name="_3_payment_types">3. Payment Types</string>
    <string name="_4_sale_types">4. Sale Types</string>
    <string name="_5_names">5. Names</string>
    <string name="_6_receipt">6. Receipt</string>
    <string name="warning_backup">Warning Backup!</string>
    <string name="warning_restore">Warning Restore!</string>
    <string name="restore_table">Restore Table</string>
    <string name="rows">№ rows</string>
    <string name="restore_status">Restore status</string>
    <string name="sales">Sales</string>
    <string name="products_eng">Products</string>
    <string name="payment_types_eng">Payment Types</string>
    <string name="sale_types_eng">Sale Types</string>
    <string name="names_eng">Names</string>
    <string name="receipt_eng">Receipt</string>
    <string name="can_t_save_item_with_negative_number">Нельзя сохранить позицию с отрицательным количеством на складе!</string>
    <string name="export">Выгрузить</string>
    <string name="set_date_range">Установите диапазон дат для выгрузки</string>
    <string name="sale_saved">Продажа успешно сохранена</string>
    <string name="fill_in_dates">Заполните даты начала и окончания!</string>
    <string name="receiptalertdialog">ReceiptAlertDialog</string>
    <string name="text_csv">text/csv</string>
    <string name="dd_mm_yyyy">dd.MM.yyyy</string>
    <string name="yyyy_mm_dd">yyyy.MM.dd</string>
    <string name="fileprovider">com.example.remoteaccountingapplication.fileprovider</string>
    <string name="utf_16">UTF-16</string>
    <string name="calendar_picker">CALENDAR_PICKER</string>
    <string name="rationale_tag">RATIONALE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>